--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,12 @@ ul{
 ul li{
     list-style: none;
     margin: 0;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+ul li div {
+    font-weight: normal;
 }
 .btn:focus,.btn.active{
     background-color: transparent;
